...
                    .clickable(
                        interactionSource = backgroundInteractionSource,
                        indication = null,
                        onClick = onDismissRequest,
                    )
                    .semantics {
                        testTag = "nutrition-dialog-scrim"
                        onClick {
                            onDismissRequest()
                            true
                        }
                    },
            )
...
